workloads/podinfo/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
      sectionName: http
  hostnames:
    - podinfo.home.arpa # overridden per environment
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
